--- a/src/app/activities/or4/or4.component.scss
+++ b/src/app/activities/or4/or4.component.scss
@@ -96,6 +96,20 @@
     display: block;
     max-height: 67%;
 }
+.or4-correct-answer{
+    display: block;
+    float: left;
+}
+.or4-question-variants input {
+    display: block;
+    position: relative;
+    margin: 0 20px;
+    margin-right: 2px;
+    width: 23px;
+    height: 23px;
+    float: left;
+    top: 7px;
+}
 
 @media only screen and (max-width:1024px)
 {
